@@ -12,6 +12,11 @@ What's New in Python 3.0.1?
 Core and Builtins
 -----------------
 
+- Issue #4533: File read operation was dreadfully slow due to a slowly
+  growing read buffer. Fixed by using the same growth rate algorithm as
+  Python 2.x.
+
+
 Library
 -------
 
